// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/numeric > bigint > should tokenize bigint (binary) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 bigint "0b11101001010101010101n" (1:1-1:24, 0-23)
│     whitespace: ""
└─2 eof null (1:24-1:24, 23-23)
      whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (exponential) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 bigint "1e3n" (1:1-1:5, 0-4)
│     whitespace: ""
└─2 eof null (1:5-1:5, 4-4)
      whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (float) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 bigint "3.13n" (1:1-1:6, 0-5)
│     whitespace: ""
└─2 eof null (1:6-1:6, 5-5)
      whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (hex) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 bigint "0x123456789ABCDEFn" (1:1-1:19, 0-18)
│     whitespace: ""
└─2 eof null (1:19-1:19, 18-18)
      whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (natural) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 bigint "0n" (1:1-1:3, 0-2)
│     whitespace: ""
└─2 eof null (1:3-1:3, 2-2)
      whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (numeric separators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 bigint "1_000_000_000_000_000_000_000n" (1:1-1:31, 0-30)
│     whitespace: ""
└─2 eof null (1:31-1:31, 30-30)
      whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (octal) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 bigint "0o777777777777n" (1:1-1:16, 0-15)
│     whitespace: ""
└─2 eof null (1:16-1:16, 15-15)
      whitespace: ""
`;

exports[`integration:constructs/numeric > binary > should tokenize binary number (lowercase) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0b01010101101" (1:1-1:14, 0-13)
│     whitespace: ""
└─2 eof null (1:14-1:14, 13-13)
      whitespace: ""
`;

exports[`integration:constructs/numeric > binary > should tokenize binary number (numeric separators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0b1010_0001" (1:1-1:12, 0-11)
│     whitespace: ""
└─2 eof null (1:12-1:12, 11-11)
      whitespace: ""
`;

exports[`integration:constructs/numeric > binary > should tokenize binary number (uppercase) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0B11101001010" (1:1-1:14, 0-13)
│     whitespace: ""
└─2 eof null (1:14-1:14, 13-13)
      whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (float) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "1.3e26" (1:1-1:7, 0-6)
│     whitespace: ""
└─2 eof null (1:7-1:7, 6-6)
      whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (no punctuators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "1E3" (1:1-1:4, 0-3)
│     whitespace: ""
└─2 eof null (1:4-1:4, 3-3)
      whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (numeric separators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "100_130e-2_6" (1:1-1:13, 0-12)
│     whitespace: ""
└─2 eof null (1:13-1:13, 12-12)
      whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (signed integer) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0e+5" (1:1-1:5, 0-4)
│     whitespace: ""
└─2 eof null (1:5-1:5, 4-4)
      whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (signed integer, negative) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "175e-2" (1:1-1:7, 0-6)
│     whitespace: ""
└─2 eof null (1:7-1:7, 6-6)
      whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (leading digit) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "1.3" (1:1-1:4, 0-3)
│     whitespace: ""
└─2 eof null (1:4-1:4, 3-3)
      whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (leading digits) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "26.5" (1:1-1:5, 0-4)
│     whitespace: ""
└─2 eof null (1:5-1:5, 4-4)
      whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (leading dot) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number ".1398" (1:1-1:6, 0-5)
│     whitespace: ""
└─2 eof null (1:6-1:6, 5-5)
      whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (missing tail) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "3." (1:1-1:3, 0-2)
│     whitespace: ""
└─2 eof null (1:3-1:3, 2-2)
      whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (numeric separators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "1_050.95" (1:1-1:9, 0-8)
│     whitespace: ""
└─2 eof null (1:9-1:9, 8-8)
      whitespace: ""
`;

exports[`integration:constructs/numeric > hex > should tokenize hexadecimal number (lowercase) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0x0123456789FeDcBa" (1:1-1:19, 0-18)
│     whitespace: ""
└─2 eof null (1:19-1:19, 18-18)
      whitespace: ""
`;

exports[`integration:constructs/numeric > hex > should tokenize hexadecimal number (numeric separators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0xA0_B0_C0" (1:1-1:11, 0-10)
│     whitespace: ""
└─2 eof null (1:11-1:11, 10-10)
      whitespace: ""
`;

exports[`integration:constructs/numeric > hex > should tokenize hexadecimal number (uppercase) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0XaBcDeF0123456789" (1:1-1:19, 0-18)
│     whitespace: ""
└─2 eof null (1:19-1:19, 18-18)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit0) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit1) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "1" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit2) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "2" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit3) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "3" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit4) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "4" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit5) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "5" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit6) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "6" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit7) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "7" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit8) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "8" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit9) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "9" (1:1-1:2, 0-1)
│     whitespace: ""
└─2 eof null (1:2-1:2, 1-1)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (digits) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "9876543210" (1:1-1:11, 0-10)
│     whitespace: ""
└─2 eof null (1:11-1:11, 10-10)
      whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (numeric separators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "1_000_000_000_000" (1:1-1:18, 0-17)
│     whitespace: ""
└─2 eof null (1:18-1:18, 17-17)
      whitespace: ""
`;

exports[`integration:constructs/numeric > octal > should tokenize octal number (lowercase) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0o01234567" (1:1-1:11, 0-10)
│     whitespace: ""
└─2 eof null (1:11-1:11, 10-10)
      whitespace: ""
`;

exports[`integration:constructs/numeric > octal > should tokenize octal number (numeric separators) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0o2_2_5_6" (1:1-1:10, 0-9)
│     whitespace: ""
└─2 eof null (1:10-1:10, 9-9)
      whitespace: ""
`;

exports[`integration:constructs/numeric > octal > should tokenize octal number (uppercase) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 number "0O76543210" (1:1-1:11, 0-10)
│     whitespace: ""
└─2 eof null (1:11-1:11, 10-10)
      whitespace: ""
`;
